# mp6-native-port

./: .gitignore  CMakeLists.txt  README.md  setup.bat  setup.ps1  setup.sh
.github/workflows/: pages.yml
docs/: ARCHITECTURE.md  BUILDING.md  CODE_MAP.md  DEBUGGING.md  DECOMP_DEPENDENCY.md  PARTYBOARD_PROVENANCE.md  RELEASING.md  SETUP_TOOL.md  TESTING.md
platform/: main_native.c
platform/android/: mp6launcher.c  mp6shell.c  saf_bridge.c  saf_bridge.h  touch_pad.cpp
platform/audio/: audio_out_sdl.c  dspadpcm.c  dspadpcm.h  mp6_audio_out.h  msm_bridge.c  msm_mixer.h  wav_writer.c  wav_writer.h
platform/content/: content_import.cpp  content_import.h  content_path_safe.h  test_path_safe.cpp
platform/dvd/: dvd_files.c
platform/gx/: aurora_bridge.c  frame_interp.c  framescope.c  freecam_input.c  gxarray_registry.c  shadow_dump.c
platform/host/: coro_arena.c  host.h  host_android.c  host_win32.c
platform/hsf/: hsf_load_native.c  mp6_fi_model.c  mp6_freecam.c  mp6_shadow_quality.c  mp6_widescreen_extrude.c
platform/null/: shims_generated.c  shims_generated_aurora.c  shims_manual.c
platform/os/: arena.c  board_stub.c  card_native.c  dll_bridge.c  log.c  malloc_direct.c  process_native.c  save_endian.c  savestate.c
res/fonts/: LICENSES.txt
res/rml/: overlay.rcss  popup.rcss  prelaunch.rcss  tabbing.rcss  tuner.rcss  window.rcss
setup/: README.md  setup.py
setup/lib/: common.py  nod_ffi.py  step_android.py  step_aurora.py  step_build.py  step_decomp.py  step_disc.py  step_prereqs.py  step_toolchain.py  test_path_safe.py
shim/include/: be.h  dolphin_compat.h  mp6_boot.h  mp6_dvd_files.h  mp6_fi_model.h  mp6_freecam.h  mp6_gxarray_registry.h  mp6_host_section.h  mp6_hsf_native.h  mp6_save_endian.h  mp6_savestate.h  mp6_shadow_dump.h  mp6_shadow_quality.h  mp6_shim_log.h  mp6_unlocked_fps.h  mp6_widescreen.h  selmenu_compat.h
tools/: apply_patches.py  build.py  check_save_gci.py  fetch_nod.py  gate_android.py  gc_tex_decode.py  gen_shims.py  leakgate.py  save_endian_selftest.c  ua1_logdiff.py  winshot.ps1
web/: MANUAL_TEST.md  android.html  index.html  package.json  packager.html  sw.js
web/css/: style.css
web/js/: fst.js  (+16 more)
(+111 files in other folders)
